<resources>
    <string name="app_name">SunFlower</string>
    <string name="Button_Skip">跳过 ></string>
    <string name="Message_Me">‘@liuxiaoqing.com’</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="title_recommend">推荐</string>
    <string name="title_see">看看</string>
    <string name="title_listen">听听</string>
    <string name="title_me">我的</string>

    <string name="arc3">英语学习活动观主题工作坊研修\nWorkshop on the concept of English learning activities</string>
    <string name="arc3_1">Speaker：XiaoHui S\nAssistant：Mr.Zhang\nTechnical Supporter：Mr.Wu\nType:Online</string>
    <string name="arc3_2">
        In this vacations we went to travel in some famous places and we visited my grandparents in the village.\n
        We learned some different things.\n
        like example:\n
        We know people work in the village they are so hard and so tired,
        they planting the vegetables,
        rice and somethings else it is very dificult.
    </string>

    <string name="arc2">双升闯关王\nShuangsheng pass breaking King</string>
    <string name="arc2_1">
        Time：\nFrom September 1, 2020\n\n
        Content：\n
        Today rolled out a handful of what it calls mini games.\n
        When you press and hold the screen, if you charge longer, the the chessman jumps farther.\n
        The chessman falls to the ground outside the cube means lose.\n
        But if you jump to the center of the cube, you scores will be double.\n
        There also a few cubes can gain extra points.
    </string>


    <string name="arc4">英语辅导\nEnglish law</string>
    <string name="arc4_1">
        Type：Online 1-to-1 tutoring\n\n
        As English is one of the main subjects that the Chinese students have to take up, learning English becomes prevalence.
        More and more students find it hard to learn English, because it is fresh to them.
        Depending on different personality, experience and background, different people may have different menthods to learn English.
        In my opinion,interest and practice are the best ways to learn English.\n
        Firstly, interest is the best teacher.
        No matter who wants learn or do something, interest is the bestcatalyst.
        Having interest, peole will feel easier to complete things. So does learning English.
        If any one feels difficulty in learning English, the first thing he should consider is to develop his interest on English.\n
        Secondly, practice makes perfect.
        The most common way to learn English is practise more.
        Nothing would be difficult with practice.
        For example, if someone find it hard to remember vocabulary, he can see the word everyday before he goes to sleep.
        I’m sure he will remember words quickly.\n
        All in all, there is no fast way to learn English well, except work hard.
        But if people have interest on English and knows the importance of practice, they will master it sooner or later.
    </string>

    <string name="info4">Contact:\nhttps://www.tutorabc.com.cn/\n</string>

    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>

    <string name="menu_course_add">添加日程</string>
    <string name="menu_course_search">搜索日程</string>
    <!--    <string name="menu_empty_classroom">空教室查询</string>-->
    <string name="menu_main_setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
